welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:2: error: value !=- is not a member of Int
  while(getX()!=6 || getY()!=-6){
                           ^