welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
var n=0
override def run() {
  while(getX()!=6 || getY()!=-6){
    ligne()
  }
  
}

def ligne(){
  while(!estFaceMur()){
    ecritMessage(n)
    n=n+1
    avance()
  }
  
}